# stock-simple-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
src/stock/: __main__.py  config.py  ipo.ipynb  ipo.py  notify.py
